   - Feature: TLS support for IMAP4 (thanks to Ryan Hayle for providing a
              patch)
   - Bugfix: The last capability sent by an IMAP4 server was ignored
   - Bugfix: The capability command when using IMAP4 was sometimes sent twice
   - Added Ryan Hayle to contributors

Version 2.2.9
 * Robert Sowada
   - Changed version to 2.2.9

Version 2.2.8		2007-09-09 18:45
 * Robert Sowada
   - Changed version to 2.2.8
   - Updated Swedish translation (thanks to Daniel Nylander)
   - Updated Vietnamese translation (thanks to Clytie Siddall)
   - Upgraded license to GPL version 3
   - Updated German translation	
	
Version 2.2.7		2007-07-15 21:20
 * Robert Sowada
   - Changed version to 2.2.7
   - Backport of signal code cleanup (from gnubiff 2.3.0 CVS)
   - Backport of showing/hiding popup via signals feature (from
        gnubiff 2.3.0 CVS; thanks to Jonathan Hitchcock for providing a patch)
   - Bugfix: Pointer tests for being not NULL
   - Compatibility with gcc 4.3 (thanks to Martin Michlmayr for providing a
        patch; this was debian bug #420969)
   - Backport of options for popup/applet appearance in taskbar (from
        gnubiff 2.3.0 CVS; thanks to Jonathan Hitchcock for providing a patch)
   - Backport of system tray frame removal bugfix (from gnubiff 2.3.0 CVS;
        thanks to Eugene Ossintsev for reporting this bug)
   - Added Jonathan Hitchcock, Martin Michlmayr and Eugene Ossintsev to
        contributors

Version 2.2.6		2007-04-09 18:37
 * Robert Sowada
   - Changed version to 2.2.6
   - Updated Swedish translation (thanks to Daniel Nylander)
   - Added Daniel Nylander to contributors
   - Backport of infinite loop bugfix (from gnubiff 2.3.0 CVS)
	
Version 2.2.5		2007-01-28 16:08
 * Robert Sowada
   - Changed version to 2.2.5
   - Fixed incompatibility in the about dialog (API change from gtk 2.8 to
        gtk 2.10?; this bug was reported by Sebastian Breier as #1621270)
   - Bugfix: Handling of the "delete-event" in the about dialog